# PyroTools

./: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  README.md  run_install.sh
bamtools/lib/: libbamtools.2.3.0.dylib  libbamtools.dylib
bamtools/lib/bamtools/: libbamtools.2.3.0.dylib
bamtools/src/: CMakeLists.txt
bamtools/src/utils/: CMakeLists.txt
bamtools/tmp/: BamTools-cfgcmd.txt
model_configure/: 454_config.txt  illumina_config.txt  iontorrent_config.txt  nanopore_config.txt  pacbio_config.txt
nlopt/: Makefile  config.status  libtool
nlopt/.libs/: libnlopt.la  libnlopt.lai
nlopt/api/: Makefile
nlopt/api/.deps/: deprecated.Plo  f77api.Plo  general.Plo  optimize.Plo  options.Plo
nlopt/auglag/: Makefile
nlopt/auglag/.deps/: auglag.Plo
nlopt/bobyqa/: Makefile
nlopt/bobyqa/.deps/: bobyqa.Plo
nlopt/cdirect/: Makefile
nlopt/cdirect/.deps/: cdirect.Plo  hybrid.Plo
nlopt/cobyla/: Makefile
nlopt/cobyla/.deps/: cobyla.Plo
nlopt/crs/: Makefile
nlopt/crs/.deps/: crs.Plo
nlopt/direct/: Makefile
nlopt/direct/.deps/: DIRect.Plo  DIRserial.Plo  DIRsubrout.Plo  direct_wrap.Plo
nlopt/esch/: Makefile
nlopt/esch/.deps/: esch.Plo
nlopt/isres/: Makefile
nlopt/isres/.deps/: isres.Plo
nlopt/luksan/: Makefile
nlopt/luksan/.deps/: mssubs.Plo  plip.Plo  plis.Plo  pnet.Plo  pssubs.Plo
nlopt/mlsl/: Makefile
nlopt/mlsl/.deps/: mlsl.Plo
nlopt/mma/: Makefile
nlopt/mma/.deps/: ccsa_quadratic.Plo  mma.Plo
nlopt/neldermead/: Makefile
nlopt/neldermead/.deps/: nldrmd.Plo  sbplx.Plo
nlopt/newuoa/: Makefile
nlopt/newuoa/.deps/: newuoa.Plo
nlopt/octave/: Makefile  dummy
nlopt/octave/.deps/: dummy.Po
nlopt/octave/dummy.dSYM/Contents/: Info.plist
nlopt/praxis/: Makefile
nlopt/praxis/.deps/: praxis.Plo
nlopt/slsqp/: Makefile
nlopt/slsqp/.deps/: slsqp.Plo
nlopt/src/Nlopt-build/: Makefile  config.status  libnlopt.la  libnlopt_cxx.la  libtool  nlopt.pc
nlopt/stogo/: Makefile
nlopt/swig/: Makefile
nlopt/test/: Makefile  testopt
nlopt/test/.deps/: testfuncs.Po  testopt.Po
nlopt/tmp/: Nlopt-cfgcmd.txt
nlopt/util/: Makefile  redblack_test
nlopt/util/.deps/: mt19937ar.Plo  qsort_r.Plo  redblack.Plo  redblack_test.Po  rescale.Plo  sobolseq.Plo  stop.Plo  timer.Plo
src/: CMakeLists.txt  ConsensusGraphTool.cpp  CropBamTool.cpp  DarkAlignmentsTool.cpp  DarkAlignmentsTool.h  DataStatisticsTool.cpp  GenericAlignment.cpp  GenericAlignment.h  GenericBamAlignmentTools.cpp  GenericBamAlignmentTools.h  GenericDataStatistics.cpp  GenericDataStatistics.h  GenericFastaTools.cpp  GenericFastaTools.h  GenericGraphTools.cpp  GenericGraphTools.h  GenericIndividualSnpCall.cpp  GenericIndividualSnpCall.h  GenericProbabilisticAlignment.cpp  GenericProbabilisticAlignment.h  GenericReadBins.cpp  GenericReadBins.h  GenericRegionTools.cpp  GenericRegionTools.h  GenericSequenceGlobal.cpp  GenericSequenceGlobal.h  GenericSequenceTools.cpp  GenericTool.h  GenericVariant.cpp  GenericVariant.h  GenericVariantCall.cpp  GenericVariantCall.h  GenericVcfTools.cpp  GenericVcfTools.h  IndividualSnpCall.cpp  LocalStrainCall.cpp  MapErrorCleanTool.cpp  ProbabilisticAlignmentTool.cpp  SimpleVariantCallTool.cpp  SimpleVariantCallTool.h  (+1 more)
wiki/: 61_otus.phyloxml
xgsutils/: README  xgsutils  xgsutils.cpp
xgsutils/alnutils/: nucmer_aligner  nucmer_aligner.cpp  ssw_aligner  ssw_aligner.cpp  xEmbossNeedle  xEmbossStretcher  xEmbossWater  xPairwiseIdentity
xgsutils/asmutils/: filter_contig_by_count  filter_contig_by_count.cpp  miraHybrid.conf  miraManifest454.conf  miraPacbio.conf  xAssemblyComplexity  xAssemblyContigN50  xAssemblyContigN90  xAssemblyContigNx  xCeleraAssemblerUnitig  xCeleraAssemblerUnitigIllumina  xFilterContigByReadCount
xgsutils/bamutils/: plot_allele_frequency_spectrum.py  xBamAverageDepth  xBamAverageDepthEachChr  xBamCoverageEachChr  xBamExtractClipSite  xBamExtractPairEndReadIntoFastq  xBamExtractReadToFasta  xBamExtractReadToFastq  xBamFilterByNM  xBamFromSamToBam  xBamInsertSize  xBamInsertSizeMetrics  xBamMapErrorRead  xBamMarkClipSite  xBamMedianDepth  xBamMedianDepthEachChr  xBamMultiHit  xBamQuickFindLargeDelete  xBamReadCountEachChr  xBamReadEndPos  xBamReadStartPos  xBamToBedByDepth  xBamToBedByRead
xgsutils/bedutils/: xBedConcatenate  xBedSortByGenomeCoordinate
xgsutils/c++/: utils.h
xgsutils/faxutils/: count_kmer  count_kmer.cpp  fasta_to_fastq.py  haplo_cluster  haplo_cluster.cpp  haplo_search  haplo_search.cpp  haplo_search.cpp.old  hcluster.py  mutate_subseq  mutate_subseq.cpp  pair_kmer_sim  pair_kmer_sim.cpp  read_haplo_matrix  read_haplo_matrix.cpp  seq_kmer_sim  seq_kmer_sim.cpp  seq_ssw_sim  seq_ssw_sim.cpp  seqsim.py  ssw.c  xFastaMutate  xFastaSequenceCount  xFastaSequenceLength  xFastqFilterBlacklist  xFastqKeepWhitelist  xFastqSequenceCount  xKmerSpectrumSimilarity
xgsutils/gsautils/: BipartiteGraphClustering.py  LigateLocalBinning.py  LigateLocalBinning.py.old  long_read_cns_table  long_read_cns_table.cpp
xgsutils/gtrutils/: ConvertPhobosGffToBed  ConvertTrfParserToBed  ExtractTrfOutputSatellites  runTrFinder.sh  trfparser_v1.pl  xTrFinderMicroSatellite  xTrFinderMiniSatellite  xTrFinderSatellite
xgsutils/metutils/: pick_representative_otus.py  pick_representative_otus.py.old  plot_taxonomy_tree.py
xgsutils/misc/: xSplitCurl
xgsutils/simutils/: xHaploidGenomeSimulator  xHaploidPointMutationSimulator.py
(+86 files in other folders)
